--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,6 +25,9 @@ jobs:
     - name: Build
       working-directory: ${{env.working-directory}}
       run: dotnet build --no-restore
+  test:
+    runs-on: ubuntu-latest
+    steps:
     - name: Test
       working-directory: ${{env.working-directory}}
       run: dotnet test --no-build --verbosity normal
