adding DB to pipeline

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -4,8 +4,10 @@ on:
   pull_request:
     branches: [ "master" ]
 env: 
-  working-directory: ./ForfeitCase
-
+  WORKING_DIRECTORY: ./ForfeitCase
+  DB_DATABASE: test_db
+  DB_USER: root
+  DB_PASSWORD: root
 jobs:
   build:
     
@@ -13,16 +15,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Set up MySQL
+      run: |
+        sudo /etc/init.d/mysql start
+        mysql -e 'CREATE DATABASE ${{ env.DB_DATABASE }};' -u${{ env.DB_USER }} -p${{ env.DB_PASSWORD }}
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
-      working-directory: ${{env.working-directory}}
+      working-directory: ${{env.WORKING_DIRECTORY}}
       run: dotnet restore
     - name: Build
-      working-directory: ${{env.working-directory}}
+      working-directory: ${{env.WORKING_DIRECTORY}}
       run: dotnet build --no-restore
     - name: Test
-      working-directory: ${{env.working-directory}}
+      working-directory: ${{env.WORKING_DIRECTORY}}
       run: dotnet test --no-build --verbosity normal
