--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           context: ./ForfeitCase
           push: true
-          tags: olokken/forfeit-case:frontend
+          tags: olokken/forfeit-case:backend
       
       
     
