--- a/ForfeitCase/ForfeitCase.Test/ForfeitCase.Test.csproj
+++ b/ForfeitCase/ForfeitCase.Test/ForfeitCase.Test.csproj
@@ -20,7 +20,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.7" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+    <PackageReference Include="MySqlConnector" Version="2.1.11" />
   </ItemGroup>
 
   <ItemGroup>
