--- a/ForfeitCase/ForfeitCase.Repository/ForfeitCase.Repository.csproj
+++ b/ForfeitCase/ForfeitCase.Repository/ForfeitCase.Repository.csproj
@@ -22,4 +22,11 @@
   <ItemGroup>
     <Folder Include="Interfaces\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Update="Properties\launchSettings.json">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
