changing in csproj

--- a/ForfeitBox/ForfeitBox.Repository/ForfeitBox.Repository.csproj
+++ b/ForfeitBox/ForfeitBox.Repository/ForfeitBox.Repository.csproj
@@ -25,7 +25,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ForfeitCase.Entities\ForfeitBox.Entities.csproj">
+    <ProjectReference Include="..\ForfeitBox.Entities\ForfeitBox.Entities.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
   </ItemGroup>
