--- a/ForfeitBox/ForfeitBox.Test/ForfeitBox.Test.csproj
+++ b/ForfeitBox/ForfeitBox.Test/ForfeitBox.Test.csproj
@@ -29,7 +29,6 @@
     <None Remove="System.Data.SqlClient" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ForfeitCase.Web\ForfeitCase.Web.csproj" />
-    <ProjectReference Include="..\ForfeitCase.Web\ForfeitBox.Web.csproj" />
+    <ProjectReference Include="..\ForfeitBox.Web\ForfeitBox.Web.csproj" />
   </ItemGroup>
 </Project>
