--- a/ForfeitBox/ForfeitBox.Web/ForfeitBox.Web.csproj
+++ b/ForfeitBox/ForfeitBox.Web/ForfeitBox.Web.csproj
@@ -28,22 +28,22 @@
     <None Remove="Dtos\Payment\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ForfeitCase.Repository\ForfeitCase.Repository.csproj">
+    <ProjectReference Include="..\ForfeitBox.Repository\ForfeitCase.Repository.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
-    <ProjectReference Include="..\ForfeitCase.Service\ForfeitCase.Service.csproj">
+    <ProjectReference Include="..\ForfeitBox.Service\ForfeitCase.Service.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
-    <ProjectReference Include="..\ForfeitCase.Entities\ForfeitCase.Entities.csproj">
+    <ProjectReference Include="..\ForfeitBox.Entities\ForfeitCase.Entities.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
-    <ProjectReference Include="..\ForfeitCase.Entities\ForfeitBox.Entities.csproj">
+    <ProjectReference Include="..\ForfeitBox.Entities\ForfeitBox.Entities.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
-    <ProjectReference Include="..\ForfeitCase.Service\ForfeitBox.Service.csproj">
+    <ProjectReference Include="..\ForfeitBox.Service\ForfeitBox.Service.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
-    <ProjectReference Include="..\ForfeitCase.Repository\ForfeitBox.Repository.csproj">
+    <ProjectReference Include="..\ForfeitBox.Repository\ForfeitBox.Repository.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
   </ItemGroup>
