--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches: [ "master" ]
 env: 
-  WORKING_DIRECTORY: ./ForfeitCase
+  WORKING_DIRECTORY: ./ForfeitBox
   DB_DATABASE: test_db
   DB_USER: root
   DB_PASSWORD: root
