--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.10.2",
     "@mui/material": "^5.10.1",
-    "keycloak": "^1.2.0",
-    "keycloak-js": "^19.0.1",
     "next": "12.2.3",
+    "next-auth": "^4.10.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.5"
