making docker compose ready for test deploy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,10 @@ services:
       context: ./client
       dockerfile: ./Dockerfile
     ports:
-      - "3000:3000"
+      - "80:3000"
   backend:
     build:
       context: ./ForfeitBox
       dockerfile: ./Dockerfile
-    ports: -"8000:8000"
+    ports:
+      - "8000:8000"
