--- a/nginx.conf
+++ b/nginx.conf
@@ -1,23 +1,23 @@
-http {
-	server {
-		listen 80 ssl;
-		server_name localhost;
+server {
+  listen 80;
+  charset UTF-8;
 
-		ssl_certificate localhost.pem;
-		ssl_certificate_key localhost-key.pem;
-		ssl_protocols TLSv1.2;
-		charset UTF-8;
+  location / {    
+    proxy_pass http://host.docker.internal:3000/;
+  }
 
-		location / {    
-			proxy_pass https://localhost:3000/;
-		}
+  location /auth {    
+    add_header X-Forwarded-For *;
+    add_header X-Forwarded-Proto http;
+    add_header X-Forwarded-Host host.docker.internal;
+    proxy_pass http://host.docker.internal:8080/; 
+  }
 
-    location /auth {    
-			proxy_pass https://localhost:5050/;
-		}
+  location /resources {
+    proxy_pass http://host.docker.internal:8080/resources; 
+  }
 
-    location /api {    
-			proxy_pass https://localhost:8080/;
-		}
-	}
+  location /api {    
+    proxy_pass http://host.docker.internal:8000/;
+  }
 }
