adding auth in app.tsx

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,7 @@ server {
 
   location / {    
     proxy_pass http://host.docker.internal:3000/;
+    #proxy is 172.19.0.1 on linux servers
   }
 
   location /auth {    
