adding js path to nginx conf (#15)

--- a/nginx.conf
+++ b/nginx.conf
@@ -18,6 +18,10 @@ server {
     proxy_pass http://host.docker.internal:8080/resources; 
   }
 
+    location /js {
+    proxy_pass http://host.docker.internal:8080/js; 
+  }
+
   location /api {    
     proxy_pass http://host.docker.internal:8000/;
   }
