--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -28,7 +28,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: ./ForfeitCase
+          context: ./ForfeitBox
           push: true
           tags: olokken/forfeit-case:backend
       
