--- a/ForfeitBox/ForfeitBox.Repository/ForfeitBox.Repository.csproj
+++ b/ForfeitBox/ForfeitBox.Repository/ForfeitBox.Repository.csproj
@@ -7,7 +7,7 @@
     <OutputType>Library</OutputType>
   </PropertyGroup>
 
-  <PropertyGroup Condition=" '$(RunConfiguration)' == 'ForfeitCase.Repository' " />
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'ForfeitBox.Repository' " />
   <ItemGroup>
     <None Remove="Dapper" />
     <None Remove="Interfaces\" />
