--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,9 @@ services:
       dockerfile: ./nginx.Dockerfile
     ports:
       - "80:80"
+  api:
+    build:
+      context: ./ForfeitBox
+      dockerfile: ./Dockerfile
+    ports:
+      - "8050:8050"
