updated to next 13 and changed some configs

--- a/ForfeitBox/ForfeitBox.Web/appsettings.json
+++ b/ForfeitBox/ForfeitBox.Web/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
-    "ConnectionStrings": {
-        "Default": "Server=127.0.0.1;Database=ForfeitCase;Uid=root;Pwd=MyNewPass;"
-    }
+  "ConnectionStrings": {
+    "Default": "Server=host.docker.internal;Database=forfeitbox;Uid=root;Pwd=passmajor;"
+  }
 }
