--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,6 +1,3 @@
 {
-  "extends": "next/core-web-vitals",
-  "rules": {
-    "react-hooks/rules-of-hooks": "on"
-  }
+  "extends": "next/core-web-vitals"
 }
