--- a/ForfeitBox/ForfeitBox.Web/appsettings.json
+++ b/ForfeitBox/ForfeitBox.Web/appsettings.json
@@ -1,5 +1,9 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=host.docker.internal;Database=forfeitbox;Uid=root;Pwd=passmajor;"
+    "Default": "Server=host.docker.internal;port=3306;Database=forfeitbox;Uid=root;Pwd=passmajor;"
+  },
+  "OIDC": {
+    "Authority": "http://host.docker.internal:8080/realms/ForfeitBox",
+    "ClientId": "forfeit_box"
   }
 }
